# lognis

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
apps/backend/: .dockerignore  Dockerfile  main.py  pyproject.toml  requirements.txt
apps/backend/app/: __init__.py  main.py
apps/backend/app/api/v1/: router.py
apps/backend/app/api/v1/endpoints/: forensics.py  history.py  logs.py
apps/backend/app/core/: config.py  database.py  rate_limit.py  security.py
apps/backend/app/engine/: analyzer.py  heuristics.py  risk_engine.py
apps/backend/app/models/: __init__.py  database_models.py  log_schema.py  schemas.py
apps/frontend/: .dockerignore  .gitignore  Dockerfile  instrumentation.ts  next.config.ts  package-lock.json  package.json  postcss.config.mjs  proxy.ts
apps/frontend/app/: globals.css  layout.tsx  page.tsx
apps/frontend/app/history/: page.tsx
apps/frontend/components/: AnomalyTable.tsx  AppLayout.tsx  EntropyTimeline.tsx  Header.tsx  LogInput.tsx  Providers.tsx  RiskGauge.tsx  RiskHistogram.tsx  RouterTransition.tsx  SeverityChart.tsx  SkeletonDashboard.tsx  SourceBreakdown.tsx  TagFrequency.tsx  TopFlagged.tsx
apps/frontend/lib/: api.ts  theme.ts  types.ts
