[project]
name = "lognis"
version = "0.1.0"
description = "Intelligent log analysis service built with FastAPI."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    # Database — SQLAlchemy 2.0 async stack targeting Neon/Supabase/Railway Postgres
    "sqlalchemy[asyncio]",
    "asyncpg",
    "greenlet",
    # Rate limiting — slowapi wraps the limits library; redis provides Redis storage
    "slowapi",
    "redis",
]
